--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -4,13 +4,19 @@
   "account": "Compte",
   "account_added": "El compte s'ha afegit correctament",
   "account_balance": "Saldo del compte",
+  "account_create_new": "Crear un compte nou",
+  "account_create_new_short": "Nou compte",
   "account_created": "El teu compte ha estat creat",
   "account_details": "Detalls del compte",
   "account_id": "ID de compte",
+  "account_import": "Importa el compte existent",
+  "account_import_short": "Compte d’importació",
   "account_info": "Informació del compte",
   "account_is_not_public_yet": "Nota: el vostre compte no serà visible a la cadena de bloqueig, llevat que executeu almenys una transacció o que hagueu rebut monedes o missatges.",
   "account_no_assets": "No es troben actius en aquest compte.",
   "account_qr_code": "Codi QR del compte",
+  "account_watch": "Importeu un compte que només vulgueu observar",
+  "account_watch_short": "Compte de vigilància",
   "accounts": "Accounts",
   "actions": "Accions",
   "activate": "Activa",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Còpia l'Enllaç \"Enviar missatge\"",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Crear Enquesta",
-  "create_your_account": "Crear el Teu Compte",
   "csv_add_recipients": "Afegir destinatari mitjançant CSV",
   "csv_error_duplicated_recipient": "Destinatari duplicat",
   "csv_error_invalid_amount": "El valor de l'import no és vàlid",
@@ -606,9 +611,7 @@
   "new_price": "Nou Preu",
   "new_q_create_account": "Nou? Creï el seu compte!",
   "new_quantity": "Nova Quantitat",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "És nou usuari? Creeu un compte nou i convertiu-vos en membre de Burst.",
   "new_version": "Nova versió",
   "newest_products": "Nous productes",
   "news": "Notícies",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Esperant que el venedor  lliuri els béns.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Avís",
+  "watch_burst_account": "Observeu el compte",
   "website": "Pàgina Web",
   "website_or_text": "Pàgina Web o Text",
   "with_burst": "Amb burst",
