--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -4,13 +4,19 @@
   "account": "Tili",
   "account_added": "Tili lisätty onnistuneesti",
   "account_balance": "Tilin saldo",
+  "account_create_new": "Luo uusi tili",
+  "account_create_new_short": "Uusi tili",
   "account_created": "Sinun tilisi on luotu",
   "account_details": "Tilin tiedot",
   "account_id": "Tilinumero",
+  "account_import": "Tuo nykyinen tili",
+  "account_import_short": "Tuo tili",
   "account_info": "Tilin tiedot",
   "account_is_not_public_yet": "Huomautus: Tilisi ei näy blockchainissa, ellet suorita vähintään yhtä tapahtumaa tai olet saanut rahoja tai viestejä.",
   "account_no_assets": "Tällä tilillä ei ole arvopapereita.",
   "account_qr_code": "Tilin QR-koodi",
+  "account_watch": "Tuo tili, jonka haluat vain tarkkailla",
+  "account_watch_short": "Tarkkaile tiliä",
   "accounts": "Accounts",
   "actions": "Toiminnot",
   "activate": "Aktivoida",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Kopioi 'Lähetä viesti' -linkki",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Luo galluppi",
-  "create_your_account": "Luo tili",
   "csv_add_recipients": "Lisää vastaanottaja CSV: llä",
   "csv_error_duplicated_recipient": "Kopioitu vastaanottaja",
   "csv_error_invalid_amount": "Virheellinen summan arvo",
@@ -606,9 +611,7 @@
   "new_price": "Uusi hinta",
   "new_q_create_account": "Uusi? Luo tili!",
   "new_quantity": "Uusi määrä",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Oletko uusi käyttäjä? Luo uusi tili ja tule Burst-jäseneksi.",
   "new_version": "Uusi versio",
   "newest_products": "Uusimmat tuotteet",
   "news": "Uutiset",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Odottaa, että myyjä toimittaa tavarat.",
   "wallet_update_available": "BURST-lompakon uusi versio on ladattavissa <a href='__link__' target='_blank'>täältä</a>. Se täytyy ladata ja asentaa manuaalisesti.",
   "warning": "Varoitus",
+  "watch_burst_account": "Tarkkaile tiliä",
   "website": "Verkkosivu",
   "website_or_text": "Websivu tai teksti",
   "with_burst": "BURST:n kanssa",
