--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -4,13 +4,19 @@
   "account": "Compte",
   "account_added": "Compte ajouté avec succès",
   "account_balance": "Solde du compte",
+  "account_create_new": "Créer un nouveau compte",
+  "account_create_new_short": "Nouveau compte",
   "account_created": "Votre compte a été créé",
   "account_details": "Détails du compte",
   "account_id": "ID de compte",
+  "account_import": "Importer un compte existant",
+  "account_import_short": "Importer un compte",
   "account_info": "Infos sur le compte",
   "account_is_not_public_yet": "Remarque: votre compte ne sera pas visible dans la blockchain, sauf si vous exécutez au moins une transaction ou si vous avez reçu des pièces ou des messages.",
   "account_no_assets": "Aucun actif trouvé sur ce compte.",
   "account_qr_code": "QR code de ce compte",
+  "account_watch": "Importez uniquement un compte que vous souhaitez observer",
+  "account_watch_short": "Regarder le compte",
   "accounts": "Accounts",
   "actions": "Actions",
   "activate": "Activer",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Copier le lien « Envoyer un message »",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Créer un sondage",
-  "create_your_account": "Créer un compte",
   "csv_add_recipients": "Ajouter un destinataire à l'aide de CSV",
   "csv_error_duplicated_recipient": "Destinataire dupliqué",
   "csv_error_invalid_amount": "Valeur du montant invalide",
@@ -606,9 +611,7 @@
   "new_price": "Nouveau prix",
   "new_q_create_account": "Nouveau ? Créez votre compte !",
   "new_quantity": "Nouvelle quantité",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Êtes-vous un nouvel utilisateur? Créez un nouveau compte et devenez membre Burst.",
   "new_version": "Nouvelle version",
   "newest_products": "Produits les plus récents",
   "news": "Actualités",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Produits en attente de livraison.",
   "wallet_update_available": "Une nouvelle version du portefeuille BURST est disponible au téléchargement <a href='__link__' target='_blank'>ici</a>. Elle doit être téléchargée et installée manuellement.",
   "warning": "Attention",
+  "watch_burst_account": "Observer le compte",
   "website": "Site web",
   "website_or_text": "Site web ou description",
   "with_burst": "Avec BURST",
