--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -4,13 +4,19 @@
   "account": "Konto",
   "account_added": "Konto zostało dodane pomyślnie",
   "account_balance": "Balans konta",
+  "account_create_new": "Stwórz nowe konto",
+  "account_create_new_short": "Nowe konto",
   "account_created": "Twoje konto zostało utworzone",
   "account_details": "Szczegóły konta",
   "account_id": "ID konta",
+  "account_import": "Zaimportuj istniejące konto",
+  "account_import_short": "Importuj konto",
   "account_info": "Dane konta",
   "account_is_not_public_yet": "Uwaga: Twoje konto nie będzie widoczne w łańcuchu bloków, chyba że wykonasz co najmniej jedną transakcję lub otrzymasz monety lub wiadomości.",
   "account_no_assets": "To konto nie posiada aktywów.",
   "account_qr_code": "QR-kod konta",
+  "account_watch": "Zaimportuj tylko konto, które chcesz obserwować",
+  "account_watch_short": "Oglądaj konto",
   "accounts": "Accounts",
   "actions": "Działania",
   "activate": "Aktywuj",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Kopiuj link 'Wyślij Wiadomość'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Utwórz ankietę",
-  "create_your_account": "Utwórz konto",
   "csv_add_recipients": "Dodaj odbiorcę za pomocą CSV",
   "csv_error_duplicated_recipient": "Zduplikowany odbiorca",
   "csv_error_invalid_amount": "Nieprawidłowa wartość kwoty",
@@ -615,9 +620,7 @@
   "new_price": "Nowa cena",
   "new_q_create_account": "Nowy? Załóż konto!",
   "new_quantity": "Nowa ilość",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Czy jesteś nowym użytkownikiem? Utwórz nowe konto i zostań członkiem Burst.",
   "new_version": "Nowa wersja",
   "newest_products": "Najnowsze produkty",
   "news": "Nowości",
@@ -1015,6 +1018,7 @@
   "waiting_on_seller": "Czekam na sprzedawcę aż dostarczy towary.",
   "wallet_update_available": "Nowa wersja oprogramowania portefela dla Bursta jest dostępna <a href='__link__' target='_blank'>tutaj</a>. Musi zostać pobrana i zainstalowana ręcznie.",
   "warning": "Ostrzeżenie",
+  "watch_burst_account": "Obserwuj konto",
   "website": "Strona",
   "website_or_text": "Strona lub tekst",
   "with_burst": "Z BURST",
