--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -4,13 +4,19 @@
   "account": "Conta",
   "account_added": "Conta adicionada com sucesso",
   "account_balance": "Saldo da conta",
+  "account_create_new": "Criar uma nova conta",
+  "account_create_new_short": "Nova conta",
   "account_created": "Sua conta foi criada",
   "account_details": "Detalhes da conta",
   "account_id": "ID da conta",
+  "account_import": "Importar conta existente",
+  "account_import_short": "Importar conta",
   "account_info": "Informações da Conta",
   "account_is_not_public_yet": "Nota: Sua conta não será visível no blockchain, a menos que você execute pelo menos uma transação ou tenha recebido moedas ou mensagens.",
   "account_no_assets": "Não foram encontrados ativos para esta conta.",
   "account_qr_code": "Código QR da conta",
+  "account_watch": "Importar uma conta que você gostaria de observar apenas",
+  "account_watch_short": "Observar Conta",
   "accounts": "Contas",
   "actions": "Ações",
   "activate": "Ativar",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Copy 'Send Message' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Criar Enquete",
-  "create_your_account": "Crie a Sua Conta",
   "csv_add_recipients": "Adicionar destinatário usando CSV",
   "csv_error_duplicated_recipient": "Destinatário duplicado",
   "csv_error_invalid_amount": "Valor de valor inválido",
@@ -608,9 +613,7 @@
   "new_price": "Preço novo",
   "new_q_create_account": "Novo? Crie a sua conta!",
   "new_quantity": "Nova quantidade",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Você é um novo usuário? Crie uma nova conta e torne-se um membro do Burst.",
   "new_version": "Nova versão",
   "newest_products": "Produtos mais recentes",
   "news": "Notícias",
@@ -1010,6 +1013,7 @@
   "waiting_on_seller": "Esperando o vendedor entregar a mercadoria.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Aviso",
+  "watch_burst_account": "Observar conta",
   "website": "Sítio da Web",
   "website_or_text": "Site ou texto",
   "with_burst": "Com Burst",
