--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -4,13 +4,19 @@
   "account": "Conta",
   "account_added": "Conta adicionada com sucesso",
   "account_balance": "Saldo da Conta",
+  "account_create_new": "Criar uma nova conta",
+  "account_create_new_short": "Nova conta",
   "account_created": "Sua conta foi criada",
   "account_details": "Detalhes de Conta",
   "account_id": "ID de Conta",
+  "account_import": "Importar conta existente",
+  "account_import_short": "Importar conta",
   "account_info": "Informação de Conta",
   "account_is_not_public_yet": "Nota: Sua conta não será visível no blockchain, a menos que você execute pelo menos uma transação ou tenha recebido moedas ou mensagens.",
   "account_no_assets": "Não se encontraram ativos para esta conta.",
   "account_qr_code": "Código QR da Conta",
+  "account_watch": "Importar uma conta que você gostaria de observar apenas",
+  "account_watch_short": "Observar Conta",
   "accounts": "Accounts",
   "actions": "Ações",
   "activate": "Ativar",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Copiar o enlace \"Enviar Mensagem",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Criar Enquete",
-  "create_your_account": "Crie a sua conta",
   "csv_add_recipients": "Adicionar destinatário usando CSV",
   "csv_error_duplicated_recipient": "Destinatário duplicado",
   "csv_error_invalid_amount": "Valor de valor inválido",
@@ -606,9 +611,7 @@
   "new_price": "Preço Novo",
   "new_q_create_account": "Novo? Crie a sua conta!",
   "new_quantity": "Nova Quantidade",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Você é um novo usuário? Crie uma nova conta e torne-se um membro do Burst.",
   "new_version": "Nova versão",
   "newest_products": "Produtos Mais Recentes",
   "news": "Notícias",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Esperando o vendedor entregar a mercadoria.",
   "wallet_update_available": "Há uma nova versão da aplicação BURST Wallet disponível para descarregar  <a href='__link__' target='_blank'>aquí</a>. Deve descarregar-se e instalar-se manualmente.",
   "warning": "Aviso",
+  "watch_burst_account": "Observar conta",
   "website": "Página Web",
   "website_or_text": "Sitio web ou Texto",
   "with_burst": "Com BURST",
