--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -4,13 +4,19 @@
   "account": "Nalog",
   "account_added": "Налог је успешно додат",
   "account_balance": "Saldo Naloga",
+  "account_create_new": "Направи нови налог",
+  "account_create_new_short": "Нови налог",
   "account_created": "Ваш налог је направљен",
   "account_details": "Detalji naloga",
   "account_id": "ID Naloga",
+  "account_import": "Увези постојећи налог",
+  "account_import_short": "Увези рачун",
   "account_info": "Informacije Naloga",
   "account_is_not_public_yet": "Напомена: Ваш налог неће бити видљив у блоковском ланцу, осим ако извршите најмање једну трансакцију или примите кованице или поруке.",
   "account_no_assets": "Uz ovaj nalog nisu pronađeni asset-i.",
   "account_qr_code": "QR Kod Naloga",
+  "account_watch": "Увозите налог који желите да посматрате само",
+  "account_watch_short": "Погледајте налог",
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "Активирати",
@@ -178,7 +184,6 @@
   "copy_send_message_link": "Kopirajte Link 'Pošalji Poruku'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Nova Anketa",
-  "create_your_account": "Kreirajte Vaš Nalog",
   "csv_add_recipients": "Додајте примаоца помоћу ЦСВ-а",
   "csv_error_duplicated_recipient": "Дуплирани прималац",
   "csv_error_invalid_amount": "Неважећа вредност износа",
@@ -568,9 +573,7 @@
   "new_price": "Nova Cena",
   "new_q_create_account": "Novi ste? Kreirajte svoj nalog!",
   "new_quantity": "Novi Iznos",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Да ли сте нови корисник? Отворите нови налог и постаните члан Бурст-а.",
   "new_version": "Нова верзија",
   "newest_products": "Najnoviji Proizvodi",
   "news": "Vesti",
@@ -936,6 +939,7 @@
   "waiting_on_seller": "Čekanje na prodavca da isporuči robu.",
   "wallet_update_available": "Nova verzija BURST novčanika je spremna za preuzimanje <a href='__link__' target='_blank'>ovdje</a>. Nova verzija mora biti preuzeta i instalirana ručno.",
   "warning": "Upozorenje",
+  "watch_burst_account": "Проматрајте рачун",
   "website": "Vebsajt",
   "website_or_text": "Web sajt ili Tekst",
   "with_burst": "Sa BURST-om",
