--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -4,13 +4,19 @@
   "account": "Аккаунт",
   "account_added": "Обліковий запис успішно додано",
   "account_balance": "Залишок на рахунку",
+  "account_create_new": "Створити новий акаунт",
+  "account_create_new_short": "Новий акаунт",
   "account_created": "Ваш обліковий запис створено",
   "account_details": "Подробиці аккаунта",
   "account_id": "ID аккаунта",
+  "account_import": "Імпортуйте наявний рахунок",
+  "account_import_short": "Імпорт рахунку",
   "account_info": "Інформація про аккаунт",
   "account_is_not_public_yet": "Примітка. Ваш обліковий запис не буде видно в блоці, якщо ви не виконаєте принаймні одну транзакцію або отримаєте монети або повідомлення.",
   "account_no_assets": "Не знайдені активи для заданого аккаунта.",
   "account_qr_code": "QR-код аккаунта",
+  "account_watch": "Імпортуйте обліковий запис, який ви хотіли б лише спостерігати",
+  "account_watch_short": "Дивитися обліковий запис",
   "accounts": "Accounts",
   "actions": "Дії",
   "activate": "Активуйте",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Скопіювати посилання \"Відправити повідомлення",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Створити опитування",
-  "create_your_account": "Створення аккаунта",
   "csv_add_recipients": "Додати одержувача за допомогою CSV",
   "csv_error_duplicated_recipient": "Дубльований отримувач",
   "csv_error_invalid_amount": "Недійсне значення суми",
@@ -606,9 +611,7 @@
   "new_price": "Нові ціни",
   "new_q_create_account": "Уперше? Створіть свій аккаунт!",
   "new_quantity": "Кількість нових",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Ви новий користувач? Створіть новий акаунт і станьте учасником Burst.",
   "new_version": "Нова версія",
   "newest_products": "Новітні продукти",
   "news": "Новини",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Очікування доставки товару продавцем.",
   "wallet_update_available": "Нова версія BURST Wallet доступна для завантаження <a href='__link__' target='_blank'>тут</a>. Її необхідно завантажити і встановити вручну.",
   "warning": "Увага",
+  "watch_burst_account": "Поспостерігайте за рахунком",
   "website": "Веб-сайт",
   "website_or_text": "Веб-сайт або текст",
   "with_burst": "З BURST",
