--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -4,13 +4,19 @@
   "account": "Сметка",
   "account_added": "Профилът е добавен успешно",
   "account_balance": "Наличност по сметка",
+  "account_create_new": "Създаване на нов акаунт",
+  "account_create_new_short": "Нов акаунт",
   "account_created": "Вашият акаунт беше създаден",
   "account_details": "Данни за сметка",
   "account_id": "Сметка ID",
+  "account_import": "Импортирайте съществуващия акаунт",
+  "account_import_short": "Импортиране на акаунт",
   "account_info": "Информация за сметка",
   "account_is_not_public_yet": "Забележка: Вашият профил няма да се вижда в blockchain, освен ако не изпълните поне една транзакция или сте получили монети или съобщения.",
   "account_no_assets": "Сметката няма активи",
   "account_qr_code": "Сметка QR код",
+  "account_watch": "Импортирайте акаунт, който искате да наблюдавате само",
+  "account_watch_short": "Гледайте акаунта",
   "accounts": "Accounts",
   "actions": "Действие",
   "activate": "Активирате",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Copy 'Send Message' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Създай анкета",
-  "create_your_account": "Създайте сметка",
   "csv_add_recipients": "Добавете получател с помощта на CSV",
   "csv_error_duplicated_recipient": "Дублиран получател",
   "csv_error_invalid_amount": "Невалидна стойност на сумата",
@@ -606,9 +611,7 @@
   "new_price": "Нова цена",
   "new_q_create_account": "Нов? Създайте своя сметка!",
   "new_quantity": "Ново количество",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Нов потребител ли сте? Създайте нов акаунт и станете член на Burst.",
   "new_version": "Нова версия",
   "newest_products": "Най-новите продукти",
   "news": "Новини",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Изчакване на продавача да достави стоки.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Предупреждение",
+  "watch_burst_account": "Спазвайте акаунта",
   "website": "Уебсайт",
   "website_or_text": "Уебсайт или текст",
   "with_burst": "With BURST",
