--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -4,13 +4,19 @@
   "account": "Λογαριασμός",
   "account_added": "Ο λογαριασμός προστέθηκε με επιτυχία",
   "account_balance": "Υπόλοιπο λογαριασμού",
+  "account_create_new": "Δημιούργησε νέο λογαριασμό",
+  "account_create_new_short": "Νέος λογαριασμός",
   "account_created": "Ο λογαριασμός σας έχει δημιουργηθεί",
   "account_details": "Λεπτομέρειες λογαριασμού",
   "account_id": "ID λογαριασμού",
+  "account_import": "Εισαγωγή υπάρχοντος λογαριασμού",
+  "account_import_short": "Εισαγωγή λογαριασμού",
   "account_info": "Πληροφορίες λογαριασμού",
   "account_is_not_public_yet": "Σημείωση: Ο λογαριασμός σας δεν θα είναι ορατός στο blockchain, εκτός εάν εκτελέσετε τουλάχιστον μία συναλλαγή ή έχετε λάβει νομίσματα ή μηνύματα.",
   "account_no_assets": "Δε βρέθηκαν μετοχές για αυτό το λογαριασμό.",
   "account_qr_code": "Κώδικας QR λογαριασμού",
+  "account_watch": "Εισαγάγετε έναν λογαριασμό που θέλετε να παρατηρήσετε μόνο",
+  "account_watch_short": "Παρακολούθηση λογαριασμού",
   "accounts": "Accounts",
   "actions": "Ενέργειες",
   "activate": "Θέτω εις ενέργειαν",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Αντιγραφή του σύνδεσμου \"Αποστολή μηνύματος\"",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Δημιουργία δημοσκόπησης",
-  "create_your_account": "Δημιουργία του λογαριασμού σας",
   "csv_add_recipients": "Προσθέστε τον παραλήπτη χρησιμοποιώντας το CSV",
   "csv_error_duplicated_recipient": "Διπλότυπος παραλήπτης",
   "csv_error_invalid_amount": "Μη έγκυρη τιμή ποσού",
@@ -606,9 +611,7 @@
   "new_price": "Νέα τιμή",
   "new_q_create_account": "Πρώτη φορά εδώ; Δημιούργησε τον λογαριασμού σου!",
   "new_quantity": "Νέα ποσότητα",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Είστε νέος χρήστης; Δημιουργήστε ένα νέο λογαριασμό και γίνετε μέλος Burst.",
   "new_version": "Νέα έκδοση",
   "newest_products": "Newest Products",
   "news": "Ειδήσεις",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Αναμονή παράδοσης των εμπορευμάτων από τον πωλητή.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "προειδοποίηση",
+  "watch_burst_account": "Παρατηρήστε λογαριασμό",
   "website": "Ιστοσελίδα",
   "website_or_text": "Website or Text",
   "with_burst": "Με burst",
