--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -4,13 +4,19 @@
   "account": "Account",
   "account_added": "Account added successfully",
   "account_balance": "Account Balance",
+  "account_create_new": "Create a new account",
+  "account_create_new_short": "New Account",
   "account_created": "Your account has been created",
   "account_details": "Account Details",
   "account_id": "Account ID",
+  "account_import": "Import existing account",
+  "account_import_short": "Import Account",
   "account_info": "Account Info",
   "account_is_not_public_yet": "Note: Your account won't be visible in the blockchain, unless you execute at least one transaction, or have received coins or messages.",
   "account_no_assets": "No assets found by this account.",
   "account_qr_code": "Account QR Code",
+  "account_watch": "Import an account you'd like to observe only",
+  "account_watch_short": "Watch Account",
   "accounts": "Accounts",
   "actions": "Actions",
   "activate": "Activate",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Copy 'Send Message' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Create Poll",
-  "create_your_account": "Create Your Account",
   "csv_add_recipients": "Add Recipient using CSV",
   "csv_error_duplicated_recipient": "Duplicated Recipient",
   "csv_error_invalid_amount": "Invalid amount value",
@@ -617,9 +622,7 @@
   "new_price": "New Price",
   "new_q_create_account": "New? Create Your Account!",
   "new_quantity": "New Quantity",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Are you a new user? Create a new account and become a Burst member.",
   "new_version": "New version",
   "newest_products": "Newest Products",
   "news": "News",
@@ -1019,6 +1022,7 @@
   "waiting_on_seller": "Waiting on seller to deliver goods.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Warning",
+  "watch_burst_account": "Observe Account",
   "website": "Website",
   "website_or_text": "Website or Text",
   "with_burst": "With BURST",
