--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -4,13 +4,19 @@
   "account": "Cuenta",
   "account_added": "Cuenta agregada exitosamente",
   "account_balance": "Saldo de la Cuenta",
+  "account_create_new": "Crea una cuenta nueva",
+  "account_create_new_short": "Nueva cuenta",
   "account_created": "Tu cuenta ha sido creada",
   "account_details": "Detalles de Cuenta",
   "account_id": "ID de Cuenta",
+  "account_import": "Importar cuenta existente",
+  "account_import_short": "Cuenta de importación",
   "account_info": "Información de Cuenta",
   "account_is_not_public_yet": "Nota: su cuenta no será visible en la cadena de bloques, a menos que ejecute al menos una transacción o haya recibido monedas o mensajes.",
   "account_no_assets": "No se han encontrado activos para esta cuenta.",
   "account_qr_code": "Código QR de la Cuenta",
+  "account_watch": "Importa una cuenta que solo deseas observar",
+  "account_watch_short": "Ver cuenta",
   "accounts": "Accounts",
   "actions": "Acciones",
   "activate": "Activar",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Copiar el enlace 'Enviar Mensaje'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Crear Encuesta",
-  "create_your_account": "Crear Su Cuenta",
   "csv_add_recipients": "Agregar destinatario utilizando CSV",
   "csv_error_duplicated_recipient": "Destinatario duplicado",
   "csv_error_invalid_amount": "Valor de la cantidad no válida",
@@ -606,9 +611,7 @@
   "new_price": "Nuevo Precio",
   "new_q_create_account": "¿Nuevo? ¡Cree su cuenta!",
   "new_quantity": "Nueva Cantidad",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "¿Eres un usuario nuevo? Cree una nueva cuenta y conviértase en miembro de Burst.",
   "new_version": "Nueva versión",
   "newest_products": "Artículos Más Recientes",
   "news": "Noticias",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Esperando a que el vendedor entregue la mercancía.",
   "wallet_update_available": "Hay una nueva versión de la aplicación BURST Wallet disponible para descarga <a href='__link__' target='_blank'>aquí</a>. Debe descargarse e instalarse manualmente.",
   "warning": "Aviso",
+  "watch_burst_account": "Observar cuenta",
   "website": "Página Web",
   "website_or_text": "Sitio web o Texto",
   "with_burst": "Con BURST",
