--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -4,13 +4,19 @@
   "account": "Račun",
   "account_added": "Račun je uspješno dodan",
   "account_balance": "Saldo računa",
+  "account_create_new": "Izraditi novi račun",
+  "account_create_new_short": "Novi profil",
   "account_created": "Vaš račun je napravljen",
   "account_details": "Detalji računa",
   "account_id": "Račun ID",
+  "account_import": "Uvezi postojeći račun",
+  "account_import_short": "Uvezi račun",
   "account_info": "Podaci računa",
   "account_is_not_public_yet": "Napomena: Vaš račun neće biti vidljiv u blockchainu, osim ako izvršite barem jednu transakciju ili primite kovanice ili poruke.",
   "account_no_assets": "Uz ovaj račun nisu pronađeni asseti.",
   "account_qr_code": "QR Kod Računa",
+  "account_watch": "Uvezite račun koji želite samo promatrati",
+  "account_watch_short": "Pogledajte račun",
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "Aktivirati",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Kopiraj poveznicu 'Pošalji poruku'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Kreiraj anketu",
-  "create_your_account": "Kreirajte vaš račun",
   "csv_add_recipients": "Dodajte primatelja pomoću CSV-a",
   "csv_error_duplicated_recipient": "Duplirani primatelj",
   "csv_error_invalid_amount": "Nevažeća vrijednost iznosa",
@@ -606,9 +611,7 @@
   "new_price": "Nova cijena",
   "new_q_create_account": "Ovdje ste novi? Kreirajte vaš račun!",
   "new_quantity": "Nova količina",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Jeste li novi korisnik? Otvorite novi račun i postanite član Burst-a.",
   "new_version": "Nova verzija",
   "newest_products": "Najnoviji proizvodi",
   "news": "Vijesti",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Čekanje da prodavač isporuči robu.",
   "wallet_update_available": "Nova verzija BURST novčanika je spremna za preuzimanje <a href='__link__' target='_blank'>ovde</a>. Nova verzija mora biti preuzeta i instalirana ručno.",
   "warning": "Upozorenje",
+  "watch_burst_account": "Promatrajte račun",
   "website": "Website",
   "website_or_text": "Website ili tekst",
   "with_burst": "Sa BURST",
