--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -4,13 +4,19 @@
   "account": "Sąskaita",
   "account_added": "Paskyra pridėta sėkmingai",
   "account_balance": "Sąskaitos balansas",
+  "account_create_new": "Sukurti naują paskyrą",
+  "account_create_new_short": "Nauja paskyra",
   "account_created": "Jūsų paskyra sukurta",
   "account_details": "Paskyros Duomenys",
   "account_id": "Sąskaitos ID",
+  "account_import": "Importuoti esamą sąskaitą",
+  "account_import_short": "Importuoti sąskaitą",
   "account_info": "Sąskaitos informacija",
   "account_is_not_public_yet": "Pastaba: jūsų paskyra nebus matoma bloko grandinėje, nebent atliksite bent vieną operaciją arba gavote monetas ar pranešimus.",
   "account_no_assets": "Pagal šią sąskaitą aktyvas nerastas.",
   "account_qr_code": "Sąskaitos QR kodas",
+  "account_watch": "Importuokite paskyrą, kurią norėtumėte tik stebėti",
+  "account_watch_short": "Stebėkite sąskaitą",
   "accounts": "Accounts",
   "actions": "Veiksmai",
   "activate": "Suaktyvinti",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Nukopijuokite nuorodą \"Siųsti pranešimą",
   "create_passive": "Sukurti sąskaita be slaptos frazės",
   "create_poll": "Sukurti apklausą",
-  "create_your_account": "Sukurkite savo sąskaitą",
   "csv_add_recipients": "Pridėti gavėją naudodami CSV",
   "csv_error_duplicated_recipient": "Kopijuotas gavėjas",
   "csv_error_invalid_amount": "Neteisinga sumos vertė",
@@ -606,9 +611,7 @@
   "new_price": "Nauja kaina",
   "new_q_create_account": "Esate naujas vartotojas? Sukurkite savo sąskaitą!",
   "new_quantity": "Naujas kiekis",
-  "new_user_no": "Ne, aš neturiu sąskaitos",
-  "new_user_text": "Ar Jūs esate naujas klientas? Sukurkite naują sąskaita ir tapkite nauju Burst nariu.",
-  "new_user_yes": "Taip, aš esu naujas klientas",
+  "new_user_text": "Ar esate naujas vartotojas? Sukurkite naują sąskaitą ir tapkite „Burst“ nariu.",
   "new_version": "Nauja versija",
   "newest_products": "Naujausi produktai",
   "news": "Naujienos",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Laukiama, kol pardavėjas pristatys prekes.",
   "wallet_update_available": "Nauja BURST piniginės versiją galima parsisiųsti <a href='__link__' target='_blank'> čia</a>. Ji turi būti atsisiųsta ir įdiegta rankiniu būdu.",
   "warning": "Įspėjimas",
+  "watch_burst_account": "Stebėkite sąskaitą",
   "website": "Tinklalapis",
   "website_or_text": "Svetainė arba tekstas",
   "with_burst": "Su BURST",
