--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -4,13 +4,19 @@
   "account": "Cont",
   "account_added": "Contul a fost adăugat cu succes",
   "account_balance": "Sold disponibil în cont",
+  "account_create_new": "Creați un cont nou",
+  "account_create_new_short": "Cont nou",
   "account_created": "Contul dvs. a fost creat",
   "account_details": "Detalii cont",
   "account_id": "ID-ul contului",
+  "account_import": "Importați contul existent",
+  "account_import_short": "Cont import",
   "account_info": "Informații despre cont",
   "account_is_not_public_yet": "Notă: contul dvs. nu va fi vizibil în blocul de blocuri, cu excepția cazului în care executați cel puțin o tranzacție sau ați primit monede sau mesaje.",
   "account_no_assets": "Nu s-au găsit active corespondente acestui cont",
   "account_qr_code": "Codul QR al acestui cont",
+  "account_watch": "Importați un cont pe care doriți să îl observați numai",
+  "account_watch_short": "Urmăriți contul",
   "accounts": "Accounts",
   "actions": "Acțiuni",
   "activate": "Activati",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Copiaţi linkul \"Trimite Mesaj\"",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Creați Sondaj",
-  "create_your_account": "Crează-ţi Contul",
   "csv_add_recipients": "Adăugați Destinatar folosind CSV",
   "csv_error_duplicated_recipient": "Destinatar duplicat",
   "csv_error_invalid_amount": "Valoarea sumei nevalide",
@@ -606,9 +611,7 @@
   "new_price": "Preț Nou",
   "new_q_create_account": "Ești nou aici? Crează-ţi contul!",
   "new_quantity": "Nouă Cantitate",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Sunteți un utilizator nou? Creați un cont nou și deveniți membru Burst.",
   "new_version": "Versiune noua",
   "newest_products": "Cele mai noi produse",
   "news": "Știri",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Aşteptare vânzător livrare marfă.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Atenţie",
+  "watch_burst_account": "Observați contul",
   "website": "Pagină Web",
   "website_or_text": "Pagină Web sau text",
   "with_burst": "Cu burst",
