--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -4,13 +4,18 @@
   "account": "Račun",
   "account_added": "",
   "account_balance": "Saldo računa",
+  "account_create_new": "",
+  "account_create_new_short": "",
   "account_created": "Vaš račun je napravljen",
   "account_details": "Detalji računa",
   "account_id": "Račun ID",
+  "account_import": "",
+  "account_import_short": "",
   "account_info": "Podaci računa",
   "account_is_not_public_yet": "Napomena: Vaš račun neće biti vidljiv u blokovskom lancu, osim ako izvršite barem jednu transakciju ili primite kovanice ili poruke.",
   "account_no_assets": "Uz ovaj račun nisu pronađeni asseti.",
   "account_qr_code": "QR Kod Računa",
+  "account_watch_short": "",
   "accounts": "Accounts",
   "actions": "Akcije",
   "activate": "",
@@ -193,7 +198,6 @@
   "copy_send_message_link": "Kopiraj poveznicu 'Pošalji poruku'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Kreiraj anketu",
-  "create_your_account": "Kreirajte vaš račun",
   "csv_add_recipients": "",
   "csv_error_duplicated_recipient": "",
   "csv_error_invalid_amount": "",
@@ -606,9 +610,7 @@
   "new_price": "Nova cijena",
   "new_q_create_account": "Ovdje ste novi? Kreirajte vaš račun!",
   "new_quantity": "Nova količina",
-  "new_user_no": "No, I have an account",
   "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
   "new_version": "Nova verzija",
   "newest_products": "Najnoviji proizvodi",
   "news": "Vijesti",
@@ -1006,6 +1008,7 @@
   "waiting_on_seller": "Čekanje da prodavač isporuči robu.",
   "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Upozorenje",
+  "watch_burst_account": "",
   "website": "Website",
   "website_or_text": "Website ili tekst",
   "with_burst": "Sa burst",
