--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -4,13 +4,19 @@
   "account": "Účet",
   "account_added": "Účet bol úspešne pridaný",
   "account_balance": "Zostatok na účte",
+  "account_create_new": "Vytvorte nový účet",
+  "account_create_new_short": "Nový účet",
   "account_created": "Váš účet bol vytvorený",
   "account_details": "Detaily účtu",
   "account_id": "ID účtu",
+  "account_import": "Importovať existujúci účet",
+  "account_import_short": "Importovať účet",
   "account_info": "Informácie o účte",
   "account_is_not_public_yet": "Poznámka: Váš účet nebude v bloku blockchain viditeľný, pokiaľ nevykonáte aspoň jednu transakciu alebo nedostanete mince alebo správy.",
   "account_no_assets": "Žiadny majetok sa našiel pre tento účet.",
   "account_qr_code": "QR kód účtu",
+  "account_watch": "Importujte iba účet, ktorý chcete sledovať",
+  "account_watch_short": "Sledujte účet",
   "accounts": "Accounts",
   "actions": "Akcie",
   "activate": "Aktivovať",
@@ -193,7 +199,6 @@
   "copy_send_message_link": "Kopírovať odkaz \"Odoslať správu",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Vytvoriť Hlasovanie",
-  "create_your_account": "Vytvorenie účtu",
   "csv_add_recipients": "Pridajte príjemcu pomocou CSV",
   "csv_error_duplicated_recipient": "Duplikovaný príjemca",
   "csv_error_invalid_amount": "Neplatná hodnota sumy",
@@ -606,9 +611,7 @@
   "new_price": "Nová cena",
   "new_q_create_account": "Ste nový? Vytvorte si účet!",
   "new_quantity": "Nové množstvo",
-  "new_user_no": "No, I have an account",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
+  "new_user_text": "Ste nový používateľ? Vytvorte si nový účet a staňte sa členom Burst.",
   "new_version": "Nová verzia",
   "newest_products": "Najnovšie produkty",
   "news": "Novinky",
@@ -1006,6 +1009,7 @@
   "waiting_on_seller": "Čakanie na predávajúceho kým doručí tovar.",
   "wallet_update_available": "Nová verzia aplikácie peňaženky BURST je k dispozícii na stiahnutie <a href='__link__' target='_blank'>tu</a>. Musí byť stiahnutá a nainštalovaná ručne.",
   "warning": "Upozornenie",
+  "watch_burst_account": "Sledujte účet",
   "website": "Webstránka",
   "website_or_text": "Webstránka alebo text",
   "with_burst": "S BURST",
