--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -1020,7 +1020,7 @@
   "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
-  "yesterdays_change": "Variação em 24h",
+  "yesterdays_change": "Alteração nas últimas 24 horas",
   "you": "Você",
   "you_received_assets": "Você recebeu 1 ativo __name__.",
   "you_received_assets_plural": "Você recebeu __count__ ativos __name__.",
