--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -1016,7 +1016,7 @@
   "wrong_pin": "PIN incorrecte",
   "x_confirmations": "__x__ confirmacions",
   "yes": "Si",
-  "yesterdays_change": "Canvi d’ahir",
+  "yesterdays_change": "Canvi de les últimes 24 hores",
   "you": "Vosté",
   "you_received_assets": "Ha rebut 1 Actiu de __name__ .",
   "you_received_assets_plural": "Ha rebut Actius de __count__ __name__ .",
