--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -1016,7 +1016,7 @@
   "wrong_pin": "Falsche PIN",
   "x_confirmations": "__x__ Bestätigungen",
   "yes": "Ja",
-  "yesterdays_change": "Veränderung zu Gestern",
+  "yesterdays_change": "Änderung der letzten 24 Stunden",
   "you": "Sie",
   "you_received_assets": "Du hast <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a> empfangen.",
   "you_received_assets_plural": "Du hast <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>. empfangen",
