--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1016,7 +1016,7 @@
   "wrong_pin": "Λάθος κωδικό PIN",
   "x_confirmations": "__x__ επιβεβαιώσεις",
   "yes": "Ναι",
-  "yesterdays_change": "Αλλαγή χθες",
+  "yesterdays_change": "Αλλαγή τελευταίας ώρας 24 ωρών",
   "you": "You",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
