--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -1016,7 +1016,7 @@
   "wrong_pin": "गलत पिन",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
-  "yesterdays_change": "कल का बदलाव",
+  "yesterdays_change": "अंतिम 24 घंटे का परिवर्तन",
   "you": "You",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
