--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -945,6 +945,7 @@
   "with_burst": "Sa BURST-om",
   "x_confirmations": "__x__ konfirmacija",
   "yes": "Da",
+  "yesterdays_change": "Промена у последњих 24 часа",
   "you": "Vi",
   "you_received_assets": "Primili ste <a href='#' data-goto-asset='__asset__'>1 __name__ asset-a</a>.",
   "you_received_assets_plural": "Primili ste <a href='#' data-goto-asset='__asset__'>__count__ __name__ asset-a</a>.",
