--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -1016,7 +1016,7 @@
   "wrong_pin": "Yanlış PIN",
   "x_confirmations": "__x__ teyitleri",
   "yes": "Evet",
-  "yesterdays_change": "Dünün Değişimi",
+  "yesterdays_change": "Son 24 Saatlik Değişiklik",
   "you": "Siz",
   "you_received_assets": "You received <a href='#' data-goto-asset='__asset__'>1 __name__ asset</a>.",
   "you_received_assets_plural": "You received <a href='#' data-goto-asset='__asset__'>__count__ __name__ assets</a>.",
