--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1016,7 +1016,7 @@
   "wrong_pin": "Неправильний PIN-код",
   "x_confirmations": "__x__ підтверджень",
   "yes": "Так",
-  "yesterdays_change": "Вчорашня зміна",
+  "yesterdays_change": "Останні 24 години зміни",
   "you": "Ви",
   "you_received_assets": "Ви отримали <a href='#' data-goto-asset='__asset__'>1 __name__ активів</a>.",
   "you_received_assets_plural": "Ви отримали <a href='#' data-goto-asset='__asset__'>__count__ __name__ активів</a>.",
